@@ -77,7 +77,7 @@ Please specify password for LDAP rootdn:
 
 WARNING:
 
-    * Do *NOT* use special characters in password right now. e.g. $, #, space.
+    * Do *NOT* use special characters in password right now. e.g. $, #, @, space.
     * EMPTY password is *NOT* permitted.
 " 20 76 2>/tmp/ldap_rootpw
 
