@@ -64,7 +64,7 @@ You can login to both webmail and iRedAdmin with this account.
 
 WARNING:
 
-    * Do *NOT* use special characters in password right now. e.g. $, #, space.
+    * Do *NOT* use special characters in password right now. e.g. $, #, @, space.
     * EMPTY password is *NOT* permitted.
 
 " 20 76 2>/tmp/first_domain_admin_passwd
